rework init
